2017-12-12  Peter Gavin  <pgavin@gmail.com>
	    Stafford Horne  <shorne@gmail.com>

	* cgen-ops.h (MUL2OFSI): New function, 2's complement overflow
	flag.
	(MUL1OFSI): New function, 1's complement overflow flag.

2017-12-12  Peter Gavin  <pgavin@gmail.com>
	    Stafford Horne <shorne@gmail.com>

	* cgen-accfp.c (remsf, remdf): New function.
	(cgen_init_accurate_fpu): Add remsf and remdf.
	* cgen-fpu.h (cgen_fp_ops): Add remsf, remdf, remxf and remtf.
	* sim-fpu.c (sim_fpu_rem): New function.
	* sim-fpu.h (sim_fpu_status_invalid_irx): New enum.
	(sim_fpu_rem): New function.
	(sim_fpu_print_status): Add case for sim_fpu_status_invalid_irx.

2017-09-06  John Baldwin  <jhb@FreeBSD.org>

	* acinclude.m4 (SIM_AC_COMMON): Honor existing CC_FOR_BUILD in
	environment.

2017-05-24  Yao Qi  <yao.qi@linaro.org>

	* sim-trace.c (trace_disasm): Caller update.

2016-08-15  Mike Frysinger  <vapier@gentoo.org>

	* sim-base.h (sim_state_base): Add prog_syms_count.
	(STATE_PROG_SYMS_COUNT): Define.
	* sim-trace.c (trace_uninstall): Free STATE_PROG_SYMS memory.
	(trace_load_symbols): New function.
	(trace_sym_value): Likewise.
	(trace_prefix): Change STATE_CPU(cpu) to sd.  Replace symbol
	loading logic with a call to trace_load_symbols.
	* sim-trace.h (trace_load_symbols, trace_sym_value): New
	prototypes.

2016-08-13  Mike Frysinger  <vapier@gentoo.org>

	* cgen-types.h (mode_names): Mark const.
	* cgen-utils.c (mode_names): Likewise.

2016-08-13  Mike Frysinger  <vapier@gentoo.org>

	* cgen-defs.h (struct cgen_state): Delete argv and envp.
	(STATE_ARGV, STATE_ENVP): Delete.

2016-02-04  Nick Clifton  <nickc@redhat.com>

	* cgen-scache.c (scache_option_handler): Prevent possible
	undefined behaviour computing the size of the scache by using
	unsigned integers instead of signed integers.

2016-01-17  Joel Brobecker  <brobecker@adacore.com>

	* sim-fpu.c: Minor comment fixes throughout.

2016-01-17  Joel Brobecker  <brobecker@adacore.com>
